[FIX] Wiki syntax processing to be much simpler and to account for unclosed states [FIX] Wiki demo to work with new jison parser factory
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/9.x@41096 b456876b-0849-0410-b77d-98878d47e9d5

--- a/lib/core/JisonParser/Wiki/Test.html
+++ b/lib/core/JisonParser/Wiki/Test.html
@@ -55,14 +55,14 @@
 			$(function(){
 				$('#runParser')
 					.click(function() {
-						$('#output').html(Wiki_Handler.parse($('#wiki').val(), $('#errorsOn').is(':checked')));
+						$('#output').html(Wiki.Parse($('#wiki').val(), $('#errorsOn').is(':checked')));
 					});
 				$('#wiki')
 					.change(function() {
-						$('#output').html(Wiki_Handler.parse($('#wiki').val(), $('#errorsOn').is(':checked')));
+						$('#output').html(Wiki.Parse($('#wiki').val(), $('#errorsOn').is(':checked')));
 					})
 					.keyup(function() {
-						$('#output').html(Wiki_Handler.parse($('#wiki').val(), $('#errorsOn').is(':checked')));
+						$('#output').html(Wiki.Parse($('#wiki').val(), $('#errorsOn').is(':checked')));
 					})
 					.change();
 			});
